# armitage

./: .gitignore  AGENTS.md  Cargo.toml  Ion.toml  README.md  SKILL.md  backlog.md  install.sh  release-plz.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
.superpowers/brainstorm/15901-1775790735/content/: nested-bars-concept.html
.superpowers/brainstorm/15901-1775790735/state/: server-stopped
crates/armitage/: CHANGELOG.md  Cargo.toml  build.rs
crates/armitage-chart/: CHANGELOG.md  Cargo.toml  build.rs  package-lock.json  package.json
crates/armitage-chart/js/: chart.js
crates/armitage-chart/scripts/: build-js.sh
crates/armitage-chart/src/: data.rs  error.rs  lib.rs  render.rs
crates/armitage-chart/templates/: chart.html
crates/armitage-chart/tests/: integration.rs  playwright.config.ts
crates/armitage-chart/tests/fixtures/: basic.json  deep-tree.json  edge-cases.json  with-issues.json
crates/armitage-chart/tests/fixtures/mock-org/: armitage.toml  team.toml
crates/armitage-chart/tests/fixtures/mock-org/.armitage/triage/: seed.sql  triage.db
crates/armitage-chart/tests/fixtures/mock-org/aurora/: issues.toml  node.toml
crates/armitage-chart/tests/fixtures/mock-org/aurora/compiler/: issues.toml  node.toml
crates/armitage-chart/tests/fixtures/mock-org/aurora/compiler/optimizer/: issues.toml  node.toml
crates/armitage-chart/tests/fixtures/mock-org/aurora/runtime/: node.toml
crates/armitage-chart/tests/fixtures/mock-org/aurora/runtime/scheduler/: issues.toml  node.toml
crates/armitage-chart/tests/fixtures/mock-org/beacon/: node.toml
crates/armitage-chart/tests/fixtures/mock-org/beacon/async/: issues.toml  node.toml
crates/armitage-chart/tests/fixtures/mock-org/beacon/stdlib/: issues.toml  milestones.toml  node.toml
crates/armitage-chart/tests/fixtures/mock-org/compass/: node.toml
crates/armitage-chart/tests/fixtures/mock-org/compass/integration/: issues.toml  node.toml
crates/armitage-chart/tests/fixtures/mock-org/delta/: node.toml
crates/armitage-chart/tests/fixtures/mock-org/echo/: node.toml
crates/armitage-chart/tests/fixtures/mock-org/echo/analysis/: issues.toml  node.toml
crates/armitage-chart/tests/helpers/: generate-html.ts  setup.ts
crates/armitage-chart/tests/specs/: expand.spec.ts  navigation.spec.ts  render.spec.ts
crates/armitage-chart/ts/: chart.ts  layout.ts  render-axis.ts  render-issues.ts  render-nodes.ts  scale.ts  types.ts
crates/armitage-core/: CHANGELOG.md  Cargo.toml
crates/armitage-core/src/: domain.rs  error.rs  goal.rs  issues.rs  lib.rs  node.rs  org.rs  period.rs  secrets.rs  team.rs  tree.rs
crates/armitage-github/: CHANGELOG.md  Cargo.toml
crates/armitage-github/src/: error.rs  issue.rs  lib.rs
crates/armitage-labels/: CHANGELOG.md  Cargo.toml
crates/armitage-labels/src/: def.rs  error.rs  lib.rs  rename.rs  schema.rs
crates/armitage-milestones/: CHANGELOG.md  Cargo.toml
crates/armitage-milestones/src/: lib.rs  milestone.rs
crates/armitage-project/: CHANGELOG.md  Cargo.toml
crates/armitage-project/src/: cache.rs  config.rs  error.rs  graphql.rs  lib.rs  sync.rs
crates/armitage-sync/: CHANGELOG.md  Cargo.toml
crates/armitage-sync/src/: config.rs  conflict.rs  error.rs  hash.rs  lib.rs  merge.rs  pull.rs  push.rs  state.rs
crates/armitage-triage/: CHANGELOG.md  Cargo.toml
crates/armitage-triage/src/: apply.rs  cache.rs  categories.rs  config.rs  db.rs  error.rs  examples.rs  fetch.rs  label_import.rs  lib.rs  llm.rs  project.rs  review.rs
crates/armitage/src/: error.rs  lib.rs  main.rs  migrate.rs
crates/armitage/src/cli/: chart.rs  complete.rs  config.rs  goal.rs  init.rs  issue.rs  milestone.rs  mod.rs  node.rs  okr.rs  project.rs  pull.rs  push.rs  repo.rs  resolve.rs  status.rs  triage.rs
crates/armitage/src/cli/snapshots/: armitage__cli__node__tests__tree_snapshot_deep_with_wrapping.snap  armitage__cli__node__tests__tree_snapshot_flat_nodes.snap  armitage__cli__node__tests__tree_snapshot_last_child_no_stray_bars.snap  armitage__cli__node__tests__tree_snapshot_mixed_statuses.snap  armitage__cli__node__tests__tree_snapshot_multiple_roots_with_children.snap  armitage__cli__node__tests__tree_snapshot_nested.snap  armitage__cli__node__tests__tree_snapshot_prefix_sibling_ordering.snap
crates/armitage/tests/: integration.rs  sub_node_milestone.rs  sync_namespace.rs  triage_review_replacements.rs
docs/superpowers/plans/: 2026-03-31-armitage-mvp.md  2026-04-03-gemini-triage-backend.md  2026-04-03-label-import-and-curated-triage-labels.md  2026-04-06-categories-refine.md  2026-04-06-triage-inspection-and-categories.md  2026-04-07-agent-driven-triage-review.md  2026-04-07-workspace-refactor.md
docs/superpowers/specs/: 2026-03-31-armitage-mvp-design.md  2026-04-03-gemini-triage-backend-design.md  2026-04-03-label-import-and-curated-triage-labels-design.md  2026-04-06-categories-refine-design.md  2026-04-06-triage-inspection-and-categories-design.md  2026-04-07-agent-driven-triage-review-design.md  2026-04-07-workspace-refactor-design.md  2026-04-09-roadmap-chart-design.md
templates/: org-agents.md
