[package]
name = "armitage-chart"
version = "0.1.0"
edition.workspace = true

[dependencies]
armitage-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
askama = { workspace = true }
toml = { workspace = true }

[build-dependencies]
ureq = { version = "3", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
