[package]
name = "armitage-labels"
version = "0.1.1"
edition.workspace = true

[dependencies]
armitage-core = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
