[package]
name = "armitage-project"
version = "0.1.0"
edition.workspace = true
description = "GitHub Projects v2 sync for armitage nodes"

[dependencies]
armitage-core = { workspace = true }
armitage-github = { workspace = true }
chrono = { workspace = true }
ionem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
