[package]
name = "armitage-sync"
version = "0.1.0"
edition.workspace = true

[dependencies]
armitage-core = { workspace = true }
armitage-github = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
