[package]
name = "armitage-triage"
version = "0.1.0"
edition.workspace = true

[dependencies]
armitage-core = { workspace = true }
armitage-labels = { workspace = true }
armitage-github = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
